Grammar/tests/unity/success/arit-precedence-2.top
start () {
    operation = a + b * c;
}