Grammar/tests/unity/error/const-withou-type.top
start () {
    const {
        number = 10;
    }
}